# raingen-latest

./: README.md  changelog.txt  pyproject.toml  run.bat  run.sh
.github/workflows/: build.yml
resources/: credits_text.json  game_config.json  prey_config.json
resources/audio/: music.json
resources/dicts/: acc_display.json  conversion_dict.json  herbs.json  species.json
resources/dicts/conditions/: illnesses.json  injuries.json  permanent_conditions.json  pregnancy.json
resources/dicts/conditions/condition_got_strings/: gain_permanent_condition_strings.json
resources/dicts/events/death/: beach.json  general.json  mountainous.json
resources/dicts/events/injury/: beach.json  forest.json  plains.json
resources/dicts/events/misc/: general.json
resources/dicts/names/: iterator_names.json
scripts/: clan.py  utility.py
scripts/cat/: cats.py  pelts.py  sprites.py
scripts/events_module/: condition_events.py  outsider_events.py  scar_events.py
scripts/events_module/relationship/: pregnancy_events.py  romantic_events.py  welcoming_events.py
scripts/game_structure/: audio.py  discord_rpc.py  game_essentials.py  load_cat.py
scripts/patrol/: patrol_outcome.py
scripts/screens/: AllegiancesScreen.py  ChooseAdoptiveParentScreen.py  ChooseMateScreen.py  ChooseMentorScreen.py  EventsScreen.py  LeaderDenScreen.py  ListScreen.py  MedDenScreen.py  PatrolScreen.py  ProfileScreen.py  RelationshipScreen.py  RoleScreen.py  SpriteInspectScreen.py
sprites/dicts/: descriptions.json  sprite_names.json  sprites_py_lists.json
(+17 files in other folders)
